--- a/demo/package.json
+++ b/demo/package.json
@@ -2,10 +2,10 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-ios": {
-      "version": "2.2.0"
+      "version": "2.2.1"
     },
     "tns-android": {
-      "version": "2.0.0"
+      "version": "2.2.0"
     }
   },
   "dependencies": {
@@ -13,6 +13,10 @@
     "tns-core-modules": "^2.0.0"
   },
   "devDependencies": {
+    "babel-traverse": "6.13.0",
+    "babel-types": "6.13.0",
+    "babylon": "6.9.0",
+    "lazy": "1.0.11",
     "nativescript-dev-typescript": "^0.3.2",
     "typescript": "^1.8.10"
   }
