Demo and references updated to NativeScript 2.4.4

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
         "noLib": false,
         "preserveConstEnums": true,
         "declaration": false,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "lib": [
+            "es2016"
+        ]
     },
     "files": [
         "auth-helper.ts",
