--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -4,7 +4,10 @@
         "target": "es5",
         "sourceMap": true,
         "experimentalDecorators": true,
-        "noEmitHelpers": true
+        "noEmitHelpers": true,
+        "lib": [
+            "es2016"
+        ]
     },
     "exclude": [
         "node_modules",
