--- a/demo/package.json
+++ b/demo/package.json
@@ -2,23 +2,23 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-ios": {
-      "version": "2.4.0"
+      "version": "2.5.0"
     },
     "tns-android": {
-      "version": "2.4.1"
+      "version": "2.5.0"
     }
   },
   "dependencies": {
-    "nativescript-oauth": "file:..",
-    "tns-core-modules": "^2.4.4",
-    "tns-platform-declarations": "^2.4.4"
+    "nativescript-oauth": "1.2.1",
+    "tns-core-modules": "2.5.0",
+    "tns-platform-declarations": "2.5.0"
   },
   "devDependencies": {
     "babel-traverse": "6.13.0",
     "babel-types": "6.13.0",
     "babylon": "6.9.0",
     "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^2.1.4"
+    "nativescript-dev-typescript": "^0.3.7",
+    "typescript": "^2.1.5"
   }
 }
