--- a/demo/package.json
+++ b/demo/package.json
@@ -4,18 +4,12 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.demowtf",
-    "tns-ios": {
-      "version": "2.5.0"
-    },
-    "tns-android": {
-      "version": "2.5.0"
-    }
+    "id": "org.nativescript.demo"
   },
   "dependencies": {
-    "nativescript-oauth": "file:..",
+    "nativescript-oauth": "1.3.0",
     "nativescript-theme-core": "~1.0.2",
-    "tns-core-modules": "2.5.0",
+    "tns-core-modules": "2.5.1",
     "tns-platform-declarations": "2.5.0"
   },
   "devDependencies": {
@@ -25,6 +19,6 @@
     "lazy": "1.0.11",
     "nativescript-dev-android-snapshot": "^0.*.*",
     "nativescript-dev-typescript": "~0.3.5",
-    "typescript": "~2.1.0"
+    "typescript": "~2.1.6"
   }
 }
