--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -4,29 +4,23 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.demoangular",
-    "tns-ios": {
-      "version": "2.5.0"
-    },
-    "tns-android": {
-      "version": "2.5.0"
-    }
+    "id": "org.nativescript.demoangular"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
-    "nativescript-angular": "1.2.0",
-    "nativescript-oauth": "1.2.1",
-    "nativescript-theme-core": "^0.2.1",
-    "reflect-metadata": "~0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "tns-core-modules": "2.5.0"
+    "@angular/common": "2.4.7",
+    "@angular/compiler": "2.4.7",
+    "@angular/core": "2.4.7",
+    "@angular/forms": "2.4.7",
+    "@angular/http": "2.4.7",
+    "@angular/platform-browser": "2.4.7",
+    "@angular/platform-browser-dynamic": "2.4.7",
+    "@angular/router": "3.4.7",
+    "nativescript-angular": "1.4.0",
+    "nativescript-oauth": "1.3.0",
+    "nativescript-theme-core": "1.0.2",
+    "reflect-metadata": "0.1.9",
+    "rxjs": "5.1.1",
+    "tns-core-modules": "2.5.1"
   },
   "devDependencies": {
     "babel-traverse": "6.22.1",
@@ -35,7 +29,7 @@
     "lazy": "1.0.11",
     "nativescript-dev-android-snapshot": "^0.*.*",
     "nativescript-dev-typescript": "^0.3.7",
-    "typescript": "2.1.5",
-    "zone.js": "~0.6.21"
+    "typescript": "2.1.6",
+    "zone.js": "0.7.7"
   }
 }
