Initial commit of UAA wrapper.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "auth-helper-facebook.ts",
         "auth-helper-google.ts",
         "auth-helper-office365.ts",
+        "auth-helper-uaa.ts",
         "index.ts",
         "tns-oauth.ts",
         "tns-oauth-page-provider.ts",
