--- a/demo-angular/app/App_Resources/iOS/Info.plist
+++ b/demo-angular/app/App_Resources/iOS/Info.plist
@@ -4,6 +4,17 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>udentifyClient</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.udentify.client</string>
+		</dict>
+	</array>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
