--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -7,6 +7,9 @@
     "id": "org.nativescript.demoangular",
     "tns-ios": {
       "version": "2.5.0"
+    },
+    "tns-android": {
+      "version": "2.5.0"
     }
   },
   "dependencies": {
@@ -19,7 +22,7 @@
     "@angular/platform-browser-dynamic": "2.4.7",
     "@angular/router": "3.4.7",
     "nativescript-angular": "1.4.0",
-    "nativescript-oauth": "file:///Users/e12421/repos/nativescript-oauth",
+    "nativescript-oauth": "1.4.0",
     "nativescript-theme-core": "1.0.2",
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.1",
