Added LinkedIn Support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
         "auth-helper-google.ts",
         "auth-helper-office365.ts",
         "auth-helper-uaa.ts",
+        "auth-helper-linkedin.ts",
         "index.ts",
         "tns-oauth.ts",
         "tns-oauth-page-provider.ts",
