--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -4,13 +4,7 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.demoangular",
-    "tns-ios": {
-      "version": "2.5.0"
-    },
-    "tns-android": {
-      "version": "2.5.0"
-    }
+    "id": "org.nativescript.demoangular"
   },
   "dependencies": {
     "@angular/common": "2.4.7",
@@ -22,7 +16,7 @@
     "@angular/platform-browser-dynamic": "2.4.7",
     "@angular/router": "3.4.7",
     "nativescript-angular": "1.4.0",
-    "nativescript-oauth": "1.4.0",
+    "nativescript-oauth": "../",
     "nativescript-theme-core": "1.0.2",
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.1",
