--- a/demo/package.json
+++ b/demo/package.json
@@ -4,10 +4,13 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.demo"
+    "id": "org.nativescript.demo",
+    "tns-ios": {
+      "version": "2.5.0"
+    }
   },
   "dependencies": {
-    "nativescript-oauth": "1.3.0",
+    "nativescript-oauth": "../",
     "nativescript-theme-core": "~1.0.2",
     "tns-core-modules": "2.5.1",
     "tns-platform-declarations": "2.5.0"
