--- a/demo/package.json
+++ b/demo/package.json
@@ -6,22 +6,25 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-ios": {
-      "version": "2.5.0"
+      "version": "3.0.0"
+    },
+    "tns-android": {
+      "version": "3.0.0"
     }
   },
   "dependencies": {
     "nativescript-oauth": "../",
     "nativescript-theme-core": "~1.0.2",
-    "tns-core-modules": "2.5.1",
-    "tns-platform-declarations": "2.5.0"
+    "tns-core-modules": "3.0.0",
+    "tns-platform-declarations": "3.0.1"
   },
   "devDependencies": {
-    "babel-traverse": "6.22.1",
-    "babel-types": "6.22.0",
-    "babylon": "6.15.0",
+    "babel-traverse": "6.24.1",
+    "babel-types": "6.24.1",
+    "babylon": "6.17.0",
     "lazy": "1.0.11",
     "nativescript-dev-android-snapshot": "^0.*.*",
-    "nativescript-dev-typescript": "~0.3.5",
-    "typescript": "~2.1.6"
+    "nativescript-dev-typescript": "~0.4.0",
+    "typescript": "~2.2.1"
   }
 }
