--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -4,32 +4,37 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.demoangular"
+    "id": "org.nativescript.demoangular",
+    "tns-ios": {
+      "version": "3.0.0"
+    },
+    "tns-android": {
+      "version": "3.0.0"
+    }
   },
   "dependencies": {
-    "@angular/common": "2.4.7",
-    "@angular/compiler": "2.4.7",
-    "@angular/core": "2.4.7",
-    "@angular/forms": "2.4.7",
-    "@angular/http": "2.4.7",
-    "@angular/platform-browser": "2.4.7",
-    "@angular/platform-browser-dynamic": "2.4.7",
-    "@angular/router": "3.4.7",
-    "nativescript-angular": "1.4.0",
+    "@angular/animations": "~4.1.0",
+    "@angular/common": "~4.1.0",
+    "@angular/compiler": "~4.1.0",
+    "@angular/core": "~4.1.0",
+    "@angular/forms": "~4.1.0",
+    "@angular/http": "~4.1.0",
+    "@angular/platform-browser": "~4.1.0",
+    "@angular/router": "~4.1.0",
+    "nativescript-angular": "~3.0.0",
     "nativescript-oauth": "../",
     "nativescript-theme-core": "1.0.2",
-    "reflect-metadata": "0.1.9",
-    "rxjs": "5.1.1",
-    "tns-core-modules": "2.5.1"
+    "reflect-metadata": "~0.1.8",
+    "rxjs": "~5.3.0",
+    "tns-core-modules": "~3.0.0",
+    "zone.js": "~0.8.2"
   },
   "devDependencies": {
-    "babel-traverse": "6.22.1",
-    "babel-types": "6.22.0",
-    "babylon": "6.15.0",
+    "babel-traverse": "6.24.1",
+    "babel-types": "6.24.1",
+    "babylon": "6.17.0",
     "lazy": "1.0.11",
-    "nativescript-dev-android-snapshot": "^0.*.*",
-    "nativescript-dev-typescript": "^0.3.7",
-    "typescript": "2.1.6",
-    "zone.js": "0.7.7"
+    "nativescript-dev-typescript": "~0.4.0",
+    "typescript": "2.2.1"
   }
 }
