--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "nativescript": {
     "platforms": {
-      "ios": "2.5.0",
-      "android": "2.5.0"
+      "ios": "3.0.0",
+      "android": "3.0.0"
     },
     "tns-ios": {
-      "version": "2.5.0"
+      "version": "3.0.0"
     }
   },
   "scripts": {
@@ -67,8 +67,8 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "nativescript-dev-typescript": "^0.3.5",
-    "tns-core-modules": "^2.5.0",
-    "typescript": "^2.1.4"
+    "nativescript-dev-typescript": "^0.4.0",
+    "tns-core-modules": "3.0.0",
+    "typescript": "^2.2.1"
   }
 }
