Move platform declarations from the app to the plugin

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "nativescript-dev-typescript": "^0.4.0",
     "tns-core-modules": "~3.0.0",
-    "typescript": "~2.2.2"
+    "typescript": "~2.2.2",
+    "tns-platform-declarations": "~3.0.1"
   }
 }
