--- a/demo/package.json
+++ b/demo/package.json
@@ -27,8 +27,7 @@
   "dependencies": {
     "nativescript-oauth": "../",
     "nativescript-theme-core": "~1.0.2",
-    "tns-core-modules": "~3.0.0",
-    "tns-platform-declarations": "~3.0.1"
+    "tns-core-modules": "~3.0.0"
   },
   "devDependencies": {
     "babel-traverse": "6.24.1",
