--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "nativescript-oauth",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "OAuth 2 login for NativeScript.",
   "main": "index.js",
   "nativescript": {},
   "scripts": {
     "build": "npm i && tsc",
     "demo.android": "npm run preparedemo && cd demo-angular && tns run android",
-    "preparedemo": "npm run build && cd demo-angular && tns plugin remove nativescript-oauth && tns plugin add .. && tns install",
-    "setup": "cd demo-angular && npm install && cd .. && npm run build && cd demo-angular && tns plugin add .. && cd .."
+    "preparedemo":
+      "npm run build && cd demo-angular && tns plugin remove nativescript-oauth && tns plugin add .. && tns install",
+    "setup":
+      "cd demo-angular && npm install && cd .. && npm run build && cd demo-angular && tns plugin add .. && cd .."
   },
   "repository": {
     "type": "git",
@@ -49,7 +51,8 @@
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/alexziskind1/nativescript-oauth/blob/master/LICENSE"
+    "url":
+      "https://github.com/alexziskind1/nativescript-oauth/blob/master/LICENSE"
   },
   "homepage": "https://github.com/alexziskind1/nativescript-oauth",
   "readmeFilename": "README.md",
