--- a/package.json
+++ b/package.json
@@ -61,9 +61,10 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "nativescript-dev-typescript": "^0.5.0",
-    "tns-core-modules": "3.4.1",
-    "typescript": "2.3.4",
-    "tns-platform-declarations": "3.4.1"
+    "nativescript-dev-typescript": "^0.7.1",
+    "tns-core-modules": "4.1.0",
+    "typescript": "2.7.1",
+    "tns-platform-declarations": "4.1.0",
+    "tslib": "1.7.1"
   }
 }
