--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
   "devDependencies": {
     "nativescript-dev-typescript": "^0.7.1",
     "tns-core-modules": "4.1.0",
-    "typescript": "2.7.1",
-    "tns-platform-declarations": "4.1.0",
-    "tslib": "1.7.1"
+    "typescript": "^2.7.2",
+    "tns-platform-declarations": "4.1.0"
   }
 }
